Improve credit application models and logic

--- a/CreditApplications.Web/Views/CreditApplications/Index.cshtml
+++ b/CreditApplications.Web/Views/CreditApplications/Index.cshtml
@@ -3,6 +3,6 @@
     ViewData["Title"] = "Home";
 }
 <div class="">
-    <p>Active credit applications: @Model.ActiveCreditApplicationsNumber</p>
+    <p>Credit applications in progress: @Model.ActiveCreditApplicationsNumber</p>
     <a asp-controller="CreditApplications" asp-action="Index" class="btn btn-primary">Refresh</a>
 </div>
