--- a/CreditApplications.Web/Views/Shared/_Layout.cshtml
+++ b/CreditApplications.Web/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="CreditApplications" asp-action="Index"><i class="fas fa-university mr-1"></i>Credit Applications System</a>
+                <a class="navbar-brand" asp-area="" asp-controller="CreditApplications" asp-action="Index"><i class="fas fa-university mr-1"></i>Credit Applications</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="CreditApplications" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CreditApplications" asp-action="List">Credit applications</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CreditApplications" asp-action="List">Applications</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Customers/Index">Customers</a>
