--- a/CreditApplications.Web/Views/CreditApplications/Details.cshtml
+++ b/CreditApplications.Web/Views/CreditApplications/Details.cshtml
@@ -1,12 +1,55 @@
-﻿@*@model CreditApplicationSystem.ApplicationServices.API.Domain.Models.CreditApplication
+﻿@model CreditApplications.Web.ViewModels.CreditApplicationViewModel
 
 @{
-    ViewBag.Title = "Credit Application Details";
+    ViewData["Title"] = "Details";
     Layout = "_Layout";
 }
 
-<h3>Credit Application Details</h3>
+<h3>Credit application details</h3>
 <hr/>
-<partial name="Partials/ApplicationDetailsPartial" model="Model"/>
-
-*@
+<table class="table table-sm table-bordered table-hover table-striped">
+    <tr>
+        <td>Id</td>
+        <td>@Model.Id</td>
+    </tr>
+    <tr>
+        <td>Date of submission</td>
+        <td>@Model.DateOfSubmission</td>
+    </tr>
+    <tr>
+        <td>Customer</td>
+        <td>@Model.CustomerFirstName @Model.CustomerLastName</td>
+    </tr>
+    <tr>
+        <td>Product type</td>
+        <td>@Model.ProductTypeName</td>
+    </tr>
+    <tr>
+        <td>Amount requested</td>
+        <td>@Model.AmountRequested</td>
+    </tr>
+    <tr>
+        <td>Amount granted</td>
+        <td>@Model.AmountGranted</td>
+    </tr>
+    <tr>
+        <td>Employee</td>
+        <td>@Model.EmployeeFirstName @Model.EmployeeLastName</td>
+    </tr>
+    <tr>
+        <td>Status</td>
+        <td>@Model.ApplicationStatus</td>
+    </tr>
+    <tr>
+        <td>Date of status change</td>
+        <td>@Model.DateOfLastStatusChange</td>
+    </tr>
+    <tr>
+        <td>Notes</td>
+        <td>@Model.Notes</td>
+    </tr>
+</table>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model!.Id">Edit</a> |
+    <a asp-action="Index">Back to Product List</a>
+</div>
