--- a/CreditApplications.Web/Views/Shared/_Layout.cshtml
+++ b/CreditApplications.Web/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="CreditApplications" asp-action="Index"><i class="fas fa-university mr-1"></i>Credit Applications</a>
+                <a class="navbar-brand" asp-area="" asp-controller="CreditApplications" asp-action="Index"><i class="fas fa-university"></i>Credit Applications</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
