--- a/CreditApplications.Web/Views/CreditApplications/List.cshtml
+++ b/CreditApplications.Web/Views/CreditApplications/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model CreditApplications.Web.ViewModels.CreditApplicationListViewModel;
+﻿@model IEnumerable<CreditApplicationViewModel>
 @{
     ViewData["Title"] = "List";
     Layout = "_Layout";
@@ -7,48 +7,44 @@
 <hr />
 <a asp-action="Create" class="btn btn-secondary" role="button">Add new credit application</a>
 <hr />
-<div class="container-fluid">
 
+<div class="container-fluid">
     <div class="row">
 
-        <table class="table table-sm table-bordered table-hover table-striped">
-            <tr class="thead-light">
-                <th>Id</th>
-                <th>Customer</th>
-                <th>Product type</th>
-                <th>Currency</th>
-                <th>Amount requested</th>
-                <th>Amount granted</th>
-                <th>Date of submission</th>
-                <th>Status</th>
-                <th>Date of status change</th>
-                <th>Notes</th>
-                <th>Employee</th>
-                <th>Actions</th>
-            </tr>
-
-            @foreach (var creditApplication in Model.CreditApplications)
-            {
+        <table class="table table-hover">
+            <thead>
                 <tr>
-                    <td><a asp-controller="CreditApplications" asp-action="Details" asp-route-id="@creditApplication.Id">@creditApplication.Id</a></td>
-                    <td>@creditApplication.CustomerFullName</td>
-                    <td>@creditApplication.ProductTypeName</td>
-                    <td>@creditApplication.Currency</td>
-                    <td>@creditApplication.AmountRequested</td>
-                    <td>@creditApplication.AmountGranted</td>
-                    <td>@creditApplication.DateOfSubmission</td>
-                    <td>@creditApplication.ApplicationStatus</td>
-                    <td>@creditApplication.DateOfLastStatusChange</td>
-                    <td>@creditApplication.Notes</td>
-                    <td>@creditApplication.EmployeeFullName</td>
-                    <td>
-                        <a asp-action="Details" asp-route-id="@creditApplication.Id">Details</a> |
-@*                        <a asp-action="Edit" asp-route-id="@creditApplication.Id">Edit</a> |
-                        <a asp-action="Delete" asp-route-id="@creditApplication.Id">Delete</a>
-*@                    </td>
-
+                    <th scope="col">@Html.DisplayNameFor(model => model.Id)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.DateOfSubmission)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.CustomerFullName)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.ProductTypeName)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.Currency)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.AmountRequested)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.AmountGranted)</th>
+                    <th></th>
                 </tr>
-            }
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr class="table-primary">
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Id)
+                        </td>
+                        <td>@Html.DisplayFor(modelItem => item.DateOfSubmission)</td>
+                        <td>@Html.DisplayFor(modelItem => item.CustomerFullName)</td>
+                        <td>@Html.DisplayFor(modelItem => item.ProductTypeName)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Currency)</td>
+                        <td>@Html.DisplayFor(modelItem => item.AmountRequested)</td>
+                        <td>@Html.DisplayFor(modelItem => item.AmountGranted)</td>
+                        <td>
+                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
         </table>
     </div>
 </div>
