--- a/CreditApplications.Web/Views/Shared/_Layout.cshtml
+++ b/CreditApplications.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link" asp-area="" asp-controller="CreditApplications" asp-action="List">Applications</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Customers/Index">Customers</a>
+                            <a class="nav-link" asp-area="" asp-controller="Customers" asp-action="List">Customers</a>
                         </li>
                         @*<partial name="_LoginPartial" />*@
                         <li class="nav-item dropdown">
