--- a/CreditApplications.Web/Views/_ViewImports.cshtml
+++ b/CreditApplications.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CreditApplications.Web
 @using CreditApplications.Web.Models
+@using CreditApplications.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
