--- a/CreditApplications.Web/Views/Shared/_Layout.cshtml
+++ b/CreditApplications.Web/Views/Shared/_Layout.cshtml
@@ -19,8 +19,14 @@
                 <div class="collapse navbar-collapse" id="navbarColor02">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" asp-area="" asp-controller="CreditApplications" asp-action="Index">
-                                Home
+                            <a class="nav-link" asp-area="" asp-controller="CreditApplications" asp-action="Index">
+                                Main
+                                <span class="visually-hidden">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Dashboard" asp-action="Index">
+                                Dashboard
                                 <span class="visually-hidden">(current)</span>
                             </a>
                         </li>
