--- a/CreditApplications.Web/Views/CreditApplications/Details.cshtml
+++ b/CreditApplications.Web/Views/CreditApplications/Details.cshtml
@@ -91,6 +91,8 @@
 </div>
 
 <div>
+    <a asp-action="AddToCart" asp-controller="Dashboard" asp-route-id="@Model.Id">Add to my cart</a> | 
     <a asp-action="Edit" asp-route-id="@Model!.Id">Edit</a> |
+    <a asp-action="Delete" asp-route-id="@Model!.Id">Delete</a> |
     <a asp-action="List">Back to list</a>
 </div>
