Add customer list view

--- a/CreditApplications.Web/Views/CreditApplications/List.cshtml
+++ b/CreditApplications.Web/Views/CreditApplications/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<CreditApplicationViewModel>
 @{
-    ViewData["Title"] = "List";
+    ViewData["Title"] = "Credit applications";
     Layout = "_Layout";
 }
 <h3>Credit applications</h3>
