--- a/CreditApplications.Web/Views/Customers/List.cshtml
+++ b/CreditApplications.Web/Views/Customers/List.cshtml
@@ -1,1 +1,42 @@
-﻿
+﻿@model IEnumerable<CreditApplications.ApplicationServices.Domain.Models.Customer>
+@{
+    ViewData["Title"] = "Customers";
+    Layout = "_Layout";
+}
+<h3>Customers</h3>
+<hr />
+<a asp-action="Create" class="btn btn-secondary" role="button">Add new customer</a>
+<hr />
+
+<div class="container-fluid">
+    <div class="row">
+
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">@Html.DisplayNameFor(model => model.Id)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.CustomerFirstName)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.CustomerLastName)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.City)</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr class="table-primary">
+                        <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                        <td>@Html.DisplayFor(modelItem => item.CustomerFirstName)</td>
+                        <td>@Html.DisplayFor(modelItem => item.CustomerLastName)</td>
+                        <td>@Html.DisplayFor(modelItem => item.City)</td>
+                        <td>
+                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
