Modify customer logic

--- a/CreditApplications.Web/Views/Customers/List.cshtml
+++ b/CreditApplications.Web/Views/Customers/List.cshtml
@@ -1,6 +1,6 @@
-﻿@model IEnumerable<CreditApplications.ApplicationServices.Domain.Models.Customer>
+﻿@model IEnumerable<Customer>
 @{
-    ViewData["Title"] = "Customers";
+    ViewData["Title"] = "Customers list";
     Layout = "_Layout";
 }
 <h3>Customers</h3>
