--- a/CreditApplications.Web/Views/_ViewImports.cshtml
+++ b/CreditApplications.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CreditApplications.Web
 @using CreditApplications.Web.Models
 @using CreditApplications.Web.ViewModels
+@using CreditApplications.ApplicationServices.Domain.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
