--- a/CreditApplications.Web/Views/Customers/Delete.cshtml
+++ b/CreditApplications.Web/Views/Customers/Delete.cshtml
@@ -1,1 +1,33 @@
-﻿
+﻿@model Customer
+
+@{
+    ViewData["Title"] = "Delete customer";
+}
+
+<h1>Delete customer:</h1>
+
+<h3>Are you sure you want to delete this?</h3>
+<div>
+    <h4>Customer</h4>
+    <hr />
+    <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CustomerFirstName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CustomerFirstName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CustomerLastName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CustomerLastName)
+        </dd>
+    </dl>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a class="btn btn-primary"  asp-action="List">Back to list</a>
+    </form>
+</div>
