Improve credit application create and edit

--- a/CreditApplications.Web/Views/CreditApplications/Edit.cshtml
+++ b/CreditApplications.Web/Views/CreditApplications/Edit.cshtml
@@ -1,13 +1,54 @@
 ﻿@model CreditApplications.Web.ViewModels.CreditApplicationViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit credit application";
     Layout = "_Layout";
 }
 
 <h3>Credit application edit</h3>
 <hr/>
 
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
+
+            <div class="form-group">
+                <label asp-for="CustomerId" class="control-label"></label>
+                <select asp-for="CustomerId" asp-items="Model!.AvailableCustomersSelectList" class="form-control"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="ProductTypeId" class="control-label"></label>
+                <select asp-for="ProductTypeId" asp-items="Model!.AvailableProductTypesSelectList" class="form-control"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="Currency" class="control-label"></label>
+                <input asp-for="Currency" class="form-control" />
+                <span asp-validation-for="Currency" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="AmountRequested" class="control-label"></label>
+                <input asp-for="AmountRequested" class="form-control" />
+                <span asp-validation-for="AmountRequested" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DateOfSubmission" class="control-label"></label>
+                <input asp-for="DateOfSubmission" class="form-control" />
+                <span asp-validation-for="DateOfSubmission" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Notes" class="control-label"></label>
+                <input asp-for="Notes" class="form-control" />
+                <span asp-validation-for="Notes" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
+                <a class="btn btn-primary" asp-action="List">Back to List</a>
+            </div>
+        </form>
+    </div>
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
