--- a/CreditApplications.Web/Views/CreditApplications/Index.cshtml
+++ b/CreditApplications.Web/Views/CreditApplications/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="">
     <p>All credit applications: @Model.ActiveCreditApplicationsNumber</p>
-    <p>My credit applications: @Model.MyCreditApplicationsNumber</p>
+    <p>Customers count: @Model.CustomersCount</p>
 
     <hr />
     
