--- a/CreditApplications.Web/Views/CreditApplications/Create.cshtml
+++ b/CreditApplications.Web/Views/CreditApplications/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CreditApplications.Web.ViewModels.CreditApplicationViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create credit application";
     Layout = "_Layout";
 }
 
@@ -14,19 +14,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="DateOfSubmission" class="control-label"></label>
-                <input asp-for="DateOfSubmission" class="form-control" />
-                <span asp-validation-for="DateOfSubmission" class="text-danger"></span>
-            </div>
-@*            <div class="form-group">
-                <label asp-for="Customer" class="control-label"></label>
-                <input asp-for="Customer" class="form-control" />
-                <span asp-validation-for="Customer" class="text-danger"></span>
+                <label asp-for="CustomerId" class="control-label"></label>
+                <select asp-for="CustomerId" asp-items="Model!.AvailableCustomersSelectList" class="form-control"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Product" class="control-label"></label>
-                <input asp-for="Product" class="form-control" />
-                <span asp-validation-for="Product" class="text-danger"></span>
+                <label asp-for="ProductTypeId" class="control-label"></label>
+                <select asp-for="ProductTypeId" asp-items="Model!.AvailableProductTypesSelectList" class="form-control"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Currency" class="control-label"></label>
@@ -39,22 +32,24 @@
                 <span asp-validation-for="AmountRequested" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Employee" class="control-label"></label>
-                <input asp-for="Employee" class="form-control" />
-                <span asp-validation-for="Employee" class="text-danger"></span>
+                <label asp-for="DateOfSubmission" class="control-label"></label>
+                <input asp-for="DateOfSubmission" class="form-control" />
+                <span asp-validation-for="DateOfSubmission" class="text-danger"></span>
             </div>
-*@            <div class="form-group">
+            <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
                 <input asp-for="Notes" class="form-control" />
                 <span asp-validation-for="Notes" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a class="btn btn-primary" asp-action="List">Back to List</a>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
