Add messages to main page

--- a/CreditApplications.Web/Views/Shared/_Layout.cshtml
+++ b/CreditApplications.Web/Views/Shared/_Layout.cshtml
@@ -9,59 +9,16 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="CreditApplications" asp-action="Index"><i class="fas fa-university"></i>Credit Applications</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarColor02">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="CreditApplications" asp-action="Index">
-                                Main
-                                <span class="visually-hidden">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Dashboard" asp-action="Index">
-                                Dashboard
-                                <span class="visually-hidden">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="CreditApplications" asp-action="List">Applications</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Customers" asp-action="List">Customers</a>
-                        </li>
-                        @*<partial name="_LoginPartial" />*@
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Settings</a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Your profile</a>
-                                <a class="dropdown-item" href="#">Application settings</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Help</a>
-                            </div>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-sm-2" type="search" placeholder="Search">
-                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-    </header>
+<header>
+    <partial name="Navigation"/>
+</header>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">
+    
+<footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - Credit Applications
         </div>
