--- a/CreditApplications.Web/Views/CreditApplications/Index.cshtml
+++ b/CreditApplications.Web/Views/CreditApplications/Index.cshtml
@@ -3,17 +3,15 @@
     ViewData["Title"] = "Dashboard";
 }
 <div class="">
-    <p>All credit applications: @Model.ActiveCreditApplicationsNumber</p>
-    <p>Customers count: @Model.CustomersCount</p>
-
+    <h3><p>All credit applications: @Model.ActiveCreditApplicationsNumber</p></h3>
+    <h3><p>Customers count: @Model.CustomersCount</p></h3>
     <hr />
-    
+    <div>
+        @await Html.PartialAsync("Messages", @Model.Messages)
+    </div>
     <div class="d-inline">
         <a asp-controller="CreditApplications" asp-action="List" class="btn btn-primary">Go to all credit applications list</a>
-
         <a asp-controller="Dashboard" asp-action="Index" class="btn btn-primary">Go to my credit applications</a>
-
         <a asp-controller="CreditApplications" asp-action="Index" class="btn btn-primary">Refresh</a>
     </div>
-    
 </div>
