--- a/CreditApplications.Web/Views/Message/Index.cshtml
+++ b/CreditApplications.Web/Views/Message/Index.cshtml
@@ -7,5 +7,5 @@
 <div>@Model.Title</div>
 @Model.Body
 <br />
-<a asp-controller="CreditApplications" asp-action="Index" class="btn btn-primary">Go back to main page</a>
+<a asp-controller="CreditApplication" asp-action="Index" class="btn btn-primary">Go back to main page</a>
 
