--- a/CreditApplications.Web/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Web/Views/Shared/Navigation.cshtml
@@ -1,13 +1,13 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" asp-area="" asp-controller="CreditApplications" asp-action="Index"><i class="fas fa-university"></i>Credit Applications</a>
+        <a class="navbar-brand" asp-area="" asp-controller="CreditApplication" asp-action="Index"><i class="fas fa-university"></i>Credit Applications</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="CreditApplications" asp-action="Index">
+                    <a class="nav-link" asp-area="" asp-controller="CreditApplication" asp-action="Index">
                         Main
                         <span class="visually-hidden">(current)</span>
                     </a>
@@ -19,10 +19,10 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="CreditApplications" asp-action="List">Applications</a>
+                    <a class="nav-link" asp-area="" asp-controller="CreditApplication" asp-action="List">Applications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Customers" asp-action="List">Customers</a>
+                    <a class="nav-link" asp-area="" asp-controller="Customer" asp-action="List">Customers</a>
                 </li>
                 @*<partial name="_LoginPartial" />*@
                 <li class="nav-item dropdown">
