Add credit application api actions

--- a/CreditApplications.Web/Views/Customer/List.cshtml
+++ b/CreditApplications.Web/Views/Customer/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Customer>
+﻿@model IEnumerable<CustomerModel>
 @{
     ViewData["Title"] = "Customers list";
     Layout = "_Layout";
