--- a/CreditApplications.Mobile/CreditApplications.Mobile/AppShell.xaml
+++ b/CreditApplications.Mobile/CreditApplications.Mobile/AppShell.xaml
@@ -79,8 +79,13 @@
         https://docs.microsoft.com/dotnet/api/xamarin.forms.shellgroupitem.flyoutdisplayoptions?view=xamarin-forms
     -->
     <FlyoutItem Title="About" Icon="icon_about.png">
+        <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
     </FlyoutItem>
-    <FlyoutItem Title="Browse" Icon="icon_feed.png">
+    <FlyoutItem Title="Customers" Icon="icon_feed.png">
+        <ShellContent Route="CustomersPage" ContentTemplate="{DataTemplate local:CustomersPage}" />
+    </FlyoutItem>
+    <FlyoutItem Title="New customer" Icon="icon_feed.png">
+        <ShellContent Route="NewCustomerPage" ContentTemplate="{DataTemplate local:NewCustomerPage}" />
     </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
