--- a/CreditApplications.Mobile/CreditApplications.Mobile/Views/NewCustomerPage.xaml
+++ b/CreditApplications.Mobile/CreditApplications.Mobile/Views/NewCustomerPage.xaml
@@ -6,12 +6,33 @@
              >
     <ContentPage.Content>
         <StackLayout Spacing="3" Padding="15">
-            <Label Text="Id" FontSize="Medium" />
-            <Entry Text="{Binding Id, Mode=TwoWay}" FontSize="Medium" />
-            <Label Text="Name" FontSize="Medium" />
-            <Editor Text="{Binding Name, Mode=TwoWay}" FontSize="Medium"/>
-            <Label Text="Description" FontSize="Medium" />
-            <Editor Text="{Binding Description, Mode=TwoWay}" FontSize="Medium"/>
+            <Label Text="Customer First Name" FontSize="Small" />
+            <Editor Text="{Binding CustomerFirstName, Mode=TwoWay}" FontSize="Small"/>
+
+            <Label Text="Customer Last Name" FontSize="Small" />
+            <Editor Text="{Binding CustomerLastName, Mode=TwoWay}" FontSize="Small"/>
+
+            <Label Text="Country" FontSize="Small" />
+            <Editor Text="{Binding Country, Mode=TwoWay}" FontSize="Small"/>
+
+            <Label Text="City" FontSize="Small" />
+            <Editor Text="{Binding City, Mode=TwoWay}" FontSize="Small"/>
+
+            <Label Text="Postal Code" FontSize="Small" />
+            <Editor Text="{Binding PostalCode, Mode=TwoWay}" FontSize="Small"/>
+
+            <Label Text="Street" FontSize="Small" />
+            <Editor Text="{Binding Street, Mode=TwoWay}" FontSize="Small"/>
+
+            <Label Text="Address Number" FontSize="Small" />
+            <Editor Text="{Binding AddressNumber, Mode=TwoWay}" FontSize="Small"/>
+
+            <Label Text="Phone Number" FontSize="Small" />
+            <Editor Text="{Binding PhoneNumber, Mode=TwoWay}" FontSize="Small"/>
+
+            <Label Text="Email" FontSize="Small" />
+            <Editor Text="{Binding Email, Mode=TwoWay}" FontSize="Small"/>
+            
             <StackLayout Orientation="Horizontal">
                 <Button Text="Anuluj" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
                 <Button Text="Zapisz" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
