Add customer edit end delete on mobile

--- a/CreditApplications.Mobile/CreditApplications.Mobile.UWP/MainPage.xaml
+++ b/CreditApplications.Mobile/CreditApplications.Mobile.UWP/MainPage.xaml
@@ -4,7 +4,8 @@
     xmlns:forms="using:Xamarin.Forms.Platform.UWP"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:CreditApplications.Mobile.UWP"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    >
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
