--- a/CreditApplications.Mobile/CreditApplications.Mobile/Views/AboutPage.xaml
+++ b/CreditApplications.Mobile/CreditApplications.Mobile/Views/AboutPage.xaml
@@ -4,7 +4,7 @@
              x:Class="CreditApplications.Mobile.Views.AboutPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="Welcome to Credit Applications Mobile!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
