--- a/CreditApplications.Mobile/CreditApplications.Mobile/Views/CustomerEditPage.xaml
+++ b/CreditApplications.Mobile/CreditApplications.Mobile/Views/CustomerEditPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CreditApplications.Mobile.Views.NewCustomerPage"
-             Title="New customer">
+             x:Class="CreditApplications.Mobile.Views.CustomerEditPage"
+             Title="Edit customer">
 
     <ContentPage.Content>
         <ScrollView>
