--- a/CreditApplications.Web/Views/Customer/Delete.cshtml
+++ b/CreditApplications.Web/Views/Customer/Delete.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Delete customer";
 }
 
-<h1>Delete customer:</h1>
+<h4>Delete customer</h4>
 
-<h3>Are you sure you want to delete this?</h3>
+<h5>Are you sure you want to delete this?</h5>
+<hr />
 <div>
-    <h4>Customer</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CustomerFirstName)
