--- a/CreditApplications.Web/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Web/Views/Shared/Navigation.cshtml
@@ -24,6 +24,9 @@
                 <li class="nav-item">
                     <a class="nav-link" asp-area="" asp-controller="Customer" asp-action="List">Customers</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="ProductType" asp-action="List">Product types</a>
+                </li>
                 @*<partial name="_LoginPartial" />*@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Settings</a>
