--- a/CreditApplications.Web/Views/Message/Index.cshtml
+++ b/CreditApplications.Web/Views/Message/Index.cshtml
@@ -2,10 +2,14 @@
 @{
     ViewData["Title"] = @Model.Title;
 }
-<div><h3>Message details</h3></div>
+<div><h4>Message details</h4></div>
 <hr />
-<div>@Model.Title</div>
-@Model.Body
+<div class="card border-primary m-3" style="max-width: 20rem;">
+    <div class="card-header">@Model.Title</div>
+    <div class="card-body">
+        <p class="card-text">@Model.Body</p>
+    </div>
+</div>
 <br />
 <a asp-controller="CreditApplication" asp-action="Index" class="btn btn-primary">Go back to main page</a>
 
