--- a/CreditApplications.Web/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Web/Views/Shared/Navigation.cshtml
@@ -29,12 +29,11 @@
                 </li>
                 @*<partial name="_LoginPartial" />*@
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Settings</a>
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Messages administration</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Your profile</a>
-                        <a class="dropdown-item" href="#">Application settings</a>
+                        <a class="dropdown-item" asp-controller="Message" asp-action="List">Messages list</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Help</a>
+                        <a class="dropdown-item" asp-controller="Message" asp-action="Create">Add new message</a>
                     </div>
                 </li>
             </ul>
